--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DC-Laptop;Database=NhaKhoaQuangVu;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"  
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
