---- BIG UPDATE THÁNG 05 ---- * Chỉnh sửa giao diện rất nhiều. * Thêm chức năng đặt hẹn. * Thêm chức năng tìm kiếm AutoComplete. * Chỉnh sửa thêm nhiều cái lặt vặt.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DC-Laptop;Database=NhaKhoaQuangVu;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DC-Laptop;Database=NhaKhoaQuangVu;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    },
+   // "DC-Laptop" 
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
