--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,27 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=DC-Laptop;Database=NhaKhoaQuangVu;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-    },
-   // "DC-Laptop" 
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DC-Laptop;Database=NhaKhoaQuangVu;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "MomoAPI": {
+    "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+    "AccessKey": "F8BBA842ECF85",
+    "ReturnUrl": "https://localhost:44392/",
+    "NotifyUrl": "https://localhost:5001/Home/MomoNotify",
+    "PartnerCode": "MOMO",
+    "RequestType": "captureMoMoWallet"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "540965423879-fihv8lijt6tejt0r58otvfnp0phm0iep.apps.googleusercontent.com",
+      "ClientSecret": "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"
     },
     "AllowedHosts": "*"
+  }
 }
