Remove Some Secrets

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,8 @@
   },
   "MomoAPI": {
     "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
-    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
-    "AccessKey": "F8BBA842ECF85",
+    "SecretKey": "YourKey",
+    "AccessKey": "YourKey",
     "ReturnUrl": "https://localhost:44392/DatHen/ThongBao",
     "NotifyUrl": "https://localhost:5001/Home/MomoNotify",
     "PartnerCode": "MOMO",
@@ -19,8 +19,8 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "540965423879-fihv8lijt6tejt0r58otvfnp0phm0iep.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "YourClientId",
+      "ClientSecret": "YourClientSecret"
     },
     "AllowedHosts": "*"
   }
